@@ -1,0 +1,16 @@
+<?xml version = '1.0' encoding = 'UTF-8'?>
+<model name="fire">
+  <submodels>
+    <submodel mesh="3d_objects/items/fire/models/flame/flame.mesh">
+      <parts>
+        <part name="main" show="true" />
+      </parts>
+    </submodel>
+  </submodels>
+  <Actions>
+  	<Action name="idle">
+		<animationpart name="innerFire.BAKED" weight="1" />
+		<animationpart name="outerFire.BAKED" weight="1" />
+	</Action>
+  </Actions>
+</model>
